correction des couleurs dans age ACM

--- a/2.3_ACM.Rmd
+++ b/2.3_ACM.Rmd
@@ -223,7 +223,7 @@ hw_grid(
     filter(REG=='27') %>% 
     hchart("pie",
            hcaes(x=age,y=jeunes,
-           color = paletteer_d(`"LaCroixColoR::Lime"`,3) ),
+           color = paletteer_d(`"LaCroixColoR::Lime"`,3,direction=-1) ),
            name="Bourgogne-Franche-Comté",
            showInLegend = T, dataLabels=F,
            size='85%',
@@ -240,7 +240,7 @@ hw_grid(
                     filter(REG=='Total France métropolitaine') ,
                   "pie",
                   hcaes(x=age,y=jeunes,
-                        color = paletteer_d(`"LaCroixColoR::Lime"`,3) ),
+                        color = paletteer_d(`"LaCroixColoR::Lime"`,3,direction=-1) ),
                   name="France métro",
                   size='50%',innerSize="50%",
                   dataLabels=F, showInLegend = F,
@@ -597,7 +597,7 @@ hw_grid(
     filter(REG=='27') %>% 
     hchart("pie",
            hcaes(x=age,y=jeunes,
-           color = paletteer_d(`"LaCroixColoR::Lime"`,3) ),
+           color = paletteer_d(`"LaCroixColoR::Lime"`,3,direction=-1) ),
            name="Bourgogne-Franche-Comté",
            showInLegend = T, dataLabels=F,
            size='85%',
@@ -615,7 +615,7 @@ hw_grid(
                     filter(REG=='Total France métropolitaine') ,
                   "pie",
                   hcaes(x=age,y=jeunes,
-                        color = paletteer_d(`"LaCroixColoR::Lime"`,3) ),
+                        color = paletteer_d(`"LaCroixColoR::Lime"`,3,direction=-1) ),
                   name="France métro",
                   size='50%',innerSize="50%",
                   dataLabels=F, showInLegend = F,
@@ -892,7 +892,7 @@ tab %>%
   filter(REG=='27') %>% 
   hchart("pie",
          hcaes(x=age,y=jeunes,
-               color = paletteer_d(`"LaCroixColoR::Lime"`,3) ),
+               color = paletteer_d(`"LaCroixColoR::Lime"`,3,direction=-1) ),
          name="Bourgogne-Franche-Comté",
          showInLegend = T, dataLabels=F,
          size='85%',
@@ -908,7 +908,7 @@ tab %>%
                   filter(REG=='Total France métropolitaine') ,
                 "pie",
                 hcaes(x=age,y=jeunes,
-                      color = paletteer_d(`"LaCroixColoR::Lime"`,3) ),
+                      color = paletteer_d(`"LaCroixColoR::Lime"`,3,direction=-1) ),
                 name="France métro",
                 size='50%',innerSize="50%",
                 dataLabels=F, showInLegend = F,
